2000-05-17  Neil Booth  <neilb@earthling.net>

	* cpplex.c (expand_name_space): Don't use ptrdiff_t.

2000-05-17  Zack Weinberg  <zack@wolery.cumb.org>

	* cpplib.c: New feature, #pragma system_header.
	* cpp.texi: Document special treatment of system headers, and
	the various mechanisms to get a header that special treatment.

2000-05-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* system.h (offsetof): Define at the very end, to ensure we prefer
	the platform's definition if available.

2000-05-16  Bruce Korb  <bkorb@gnu.org>

	* fixinc/fixincl.c: improve the debug displays, ignore SIGPIPE
	* fixinc/server.c: likewise
	* fixinc/fixfixes.c( char_macro_def_fix ): fix regex
	+ #ifdef debugging code + use #def constant for
	sub-pattern count
	* fixinc/inclhack.def( hpux11_fabsf ): Keep HP-UX 11 from stomping
	on C++ math namespace

2000-05-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* fixinc/fixfixes.c (char_macro_use_fix, char_macro_def_fix):
	Don't check the return value of sprintf.  Use asprintf to avoid
	buffer overflows.

Wed May 17 17:27:44 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* flags.h (warn_unused_function, warn_unused_label,
 	warn_unused_parameter, warn_unused_variable, warn_unused_value):
 	Replace ``warn_unused''.
	(set_Wunused): Add declaration.
	* toplev.c (set_Wunused): New function.
	(warn_unused_function, warn_unused_label, warn_unused_parameter,
 	warn_unused_variable, warn_unused_value): New variables.
	(W_options): Add -Wunused-function, -Wunused-function,
 	-Wunused-label, -Wunused-parameter, -Wunused-variable and
 	-Wunused-value.  Delete -Wunused.  Handled in decode_W_option.

	* toplev.c (decode_W_option): Update -Wunused flags by calling
 	set_Wunused.
  	* c-decl.c (c_decode_option): Ditto for -Wall.

	* stmt.c (expand_expr_stmt, expand_expr_stmt,
 	warn_about_unused_variables): Replace warn_unused with more
 	explicit warn_unused_value et.al.
	* function.c (expand_function_end): Ditto.