@@ -1,3 +1,12 @@
+2000-05-17  Richard Henderson  <rth@cygnus.com>
+
+	* toplev.c (rest_of_compilation): Don't call optimize_mode_switching
+	unless OPTIMIZE_MODE_SWITCHING.  Conditionally set no_new_pseudos.
+	Don't call recompute_reg_usage if no_new_pseudos is true.
+	* lcm.c (optimize_mode_switching): Move ifdefs outside function.
+	Return true if we did work; update global life information.
+	* basic-block.h (optimize_mode_switching): Update decl.
+
 2000-05-17  Neil Booth  <neilb@earthling.net>
 
 	* cpplex.c (expand_name_space): Don't use ptrdiff_t.
